# ROSConES

./: README.md
Docker/: Dockerfile  docker-compose.yaml
Docker/scripts/: setup_bashrc.sh
src/cmd_vel_plugin/: CMakeLists.txt  package.xml
src/cmd_vel_plugin/launch/: cmd_vel_plugin.launch.py
src/cmd_vel_plugin/src/: pub_cmd_vel.cpp
src/cmd_vel_plugin/urdf/: diff_drive.urdf.xacro
src/diff_drive_description/: CMakeLists.txt  package.xml
src/diff_drive_description/launch/: diff_drive.launch.py
src/diff_drive_description/urdf/: diff_drive.urdf.xacro  diff_drive_macro.xacro
src/gazebo_sensors/: CMakeLists.txt  package.xml
src/gazebo_sensors/launch/: cube_with_sensors.launch.py  gazebo_bridge.launch.py
src/gazebo_sensors/urdf/: cube_with_sensors.urdf.xacro
src/hello_world/: CMakeLists.txt  HelloWorld.cpp
src/hello_world_ros/: CMakeLists.txt  package.xml
src/hello_world_ros/launch/: hello_world_ros.launch.py
src/hello_world_ros/src/: hello_world_ros.cpp
src/hello_world_ros/world/: hello_world_ros_plugin.sdf
src/pendulum_description/: CMakeLists.txt  package.xml
src/pendulum_description/config/: pendulum_controller.yaml
src/pendulum_description/launch/: display.launch.py  pendulum_controller.launch.py  pendulum_no_controllers.launch.py
src/pendulum_description/urdf/: pendulum_description  pendulum_robot.xacro  pendulum_robot_with_controllers.xacro
src/sine_ctrl/: CMakeLists.txt  package.xml  sine_controller.xml
src/sine_ctrl/src/: sine_ctrl.cpp
src/spawn_simple_object/: CMakeLists.txt  package.xml
src/spawn_simple_object/launch/: spawn_model.launch.py
src/spawn_simple_object/urdf/: cube.urdf.xacro
